# ai-sync

./: .gitignore  README.md  pyproject.toml
.dev/: TODO.md  proposal.md
.dev/001-ai-sync/: init.md
.dev/002-dual-mode-config/: init.md
.dev/003-tool-management/: init.md
.dev/004-bugfix-file-collector/: init.md
src/ai_sync/: __init__.py  cli.py  config_store.py  file_collector.py  git_repo.py  github_client.py  manifest.py  models.py  path_mapper.py  sync_engine.py
src/ai_sync/adapters/: __init__.py  base.py  claude_code.py  gemini.py  opencode.py  shared_skills.py
tests/: __init__.py  test_cli.py  test_config_store.py  test_file_collector.py  test_git_repo.py  test_github_client.py  test_manifest.py  test_models.py  test_path_mapper.py  test_sync_engine.py
tests/adapters/: test_adapters.py
