[project]
name = "ai-sync"
version = "0.1.0"
description = "Sync AI coding assistant configs across machines"
requires-python = ">=3.11"
dependencies = [
    "typer>=0.12.0",
    "gitpython>=3.1.0",
    "PyGithub>=2.0.0",
    "rich>=13.0.0",
    "pydantic>=2.0.0",
]

[project.scripts]
ai-sync = "ai_sync.cli:app"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/ai_sync"]

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "--tb=short"

[tool.coverage.run]
source = ["src/ai_sync"]
omit = ["tests/*"]

[dependency-groups]
dev = [
    "pytest>=8.0.0",
    "pytest-cov>=5.0.0",
]
